--- a/practice-two/src/styles/layouts/product.scss
+++ b/practice-two/src/styles/layouts/product.scss
@@ -1,14 +1,14 @@
 .product {
-  margin: toRem(40) auto 0;
+  margin: toRem(40px) auto 0;
   text-align: center;
   font-family: Satoshi;
   padding-bottom: 15px;
 
   &__item {
-    margin-top: toRem(32);
-    margin-bottom: toRem(24);
+    margin-top: toRem(32px);
+    margin-bottom: toRem(24px);
     display: flex;
-    gap: toRem(16);
+    gap: toRem(16px);
     overflow: auto;
 
     &::-webkit-scrollbar {
@@ -20,27 +20,27 @@
     text-align: left;
 
     &-img {
-      margin-bottom: toRem(10);
-      width: toRem(198);
-      max-height: toRem(200);
-      border-radius: toRem(12.42);
+      margin-bottom: toRem(10px);
+      width: toRem(198px);
+      max-height: toRem(200px);
+      border-radius: toRem(12.42px);
     }
   }
 
   &__name {
-    font-size: 0.8rem;
+    font-size: toRem(16px);
     font-weight: 700;
   }
 
   &__evaluate {
     display: flex;
     align-items: center;
-    gap: toRem(4.44);
-    padding: toRem(4) 0;
+    gap: toRem(4.44px);
+    padding: toRem(4px) 0;
 
     &-img {
-      width: toRem(15.47);
-      height: toRem(15.47);
+      width: toRem(15.47px);
+      height: toRem(15.47px);
     }
 
     &-num {
@@ -56,7 +56,7 @@
     display: flex;
     font-size: 1rem;
     font-weight: 700;
-    gap: toRem(5);
+    gap: toRem(5px);
     align-items: center;
 
     &-sell {
@@ -67,66 +67,62 @@
     &-precent {
       background-color: $bg-product;
       font-size: 0.5rem;
-      border-radius: toRem(62);
+      border-radius: toRem(62px);
       color: $product-color;
       font-weight: 500;
-      padding: toRem(6) toRem(14);
+      padding: toRem(6px) toRem(14px);
     }
   }
 
   &--bottom {
-    padding-bottom: toRem(40);
+    padding-bottom: toRem(40px);
     border-bottom: 1px solid $line-color;
   }
 }
 
 
   @media (min-width: 1440px) {
-    // @function toRem($pxValue) {
-    //   @return math.div($pxValue, 32) * 1rem;
-    // }
-
     .product {
-      margin: toRem(62) auto 0;
-
+      margin: toRem(62px) auto 0;
       &__item {
-        margin-top: toRem(55);
+        margin-top: toRem(55px);
+        margin-bottom: toRem(36px);
         justify-content: space-between;
         overflow: none;
       }
 
       &__card {
         &-img {
-          width: toRem(295);
-          max-height: toRem(298);
-          border-radius: toRem(20);
-        }
-
-        &-name {
-          font-size: math.div(20, 32) * 1rem;
+          width: toRem(295px);
+          max-height: toRem(298px);
+          border-radius: toRem(20px);
         }
       }
 
+      &__name {
+        font-size: toRem(20px);
+      }
+
       &__evaluate {
-        gap: toRem(5.31);
-        padding: toRem(8) 0;
+        gap: toRem(5.31px);
+        padding: toRem(8px) 0;
 
         &-img {
-          width: toRem(18.49);
-          height: toRem(18.49);
+          width: toRem(18.49px);
+          height: toRem(18.49px);
         }
 
         &-num {
-          font-size: math.div(14, 32) * 1rem;
+          font-size: toRem(14px);
         }
       }
 
       &__price {
-        font-size: 0.75rem;
+        font-size: toRem(24px);
       }
 
       &--bottom {
-        padding-bottom: toRem(18);
+        padding-bottom: toRem(64px);
       }
     }
   }
