--- a/practice-two/src/styles/bases/variable.scss
+++ b/practice-two/src/styles/bases/variable.scss
@@ -10,3 +10,5 @@ $primary-color: rgba(0, 0, 0, 0.60);
 $btn-primary: #e7e7e7;
 $line-color: rgba(0, 0, 0, 0.10);
 $bg-product: rgba(255, 51, 51, 0.1);
+
+$size : 20px ;
