--- a/practice-two/src/styles/layouts/sign-up.scss
+++ b/practice-two/src/styles/layouts/sign-up.scss
@@ -3,13 +3,13 @@
   font-family: Satoshi;
   text-align: center;
   font-size: 20px;
-  min-width: toRem(390);
+  min-width: toRem(390px);
 
   &__text {
     font-size: 0.6rem;
     color: $text-color;
     text-align: center;
-    padding: toRem(9) 0;
+    padding: toRem(9px) 0;
 
   }
 
@@ -19,21 +19,17 @@
 
   &__icon {
     display: none;
-    padding: toRem(9) 0;
+    padding: toRem(9px) 0;
   }
 }
 
 @media (min-width: 1440px) {
-  @function toRem($pxValue) {
-    @return math.div($pxValue, 32) * 1rem;
-  }
-
   .sign-up {
     display: flex;
     line-height: normal;
 
     &__text {
-      font-size: toRem(14);
+      font-size: toRem(14px);
       margin: 0 auto;
 
     }
