--- a/practice-two/src/styles/modules/title.scss
+++ b/practice-two/src/styles/modules/title.scss
@@ -11,6 +11,10 @@
     max-width: toRem(246px);
     margin: 0 auto;
   }
+
+  &--left {
+    max-width: toRem(246px);
+  }
 }
 
 .title-secondary {
