--- a/practice-two/src/styles/index.scss
+++ b/practice-two/src/styles/index.scss
@@ -1,6 +1,6 @@
 // all style
 
-@import 'modules/unit.scss';
+@import 'utils/index.scss';
 @import 'bases/index.scss';
 @import 'layouts/index.scss';
 @import 'modules/index.scss';
