change gap 20px to toRem(20px)

--- a/practice-two/src/styles/layouts/comment.scss
+++ b/practice-two/src/styles/layouts/comment.scss
@@ -6,7 +6,7 @@
   &__card {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+    gap: toRem(20px);
   }
 
   .comment__head {
