update placeholder and mixin for layouts

--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -15,11 +15,10 @@
   }
 
   &__info {
-    display: flex;
+    @extend %space;
     flex-wrap: wrap;
     max-width: toRem(278px);
     padding: toRem(20px) 0;
-    justify-content: space-between;
     margin: 0 toRem(40px);
   }
 
