--- a/practice-two/src/styles/layouts/header.scss
+++ b/practice-two/src/styles/layouts/header.scss
@@ -1,9 +1,8 @@
 .navbar {
-  display: flex;
   font-family: Satoshi;
   padding: toRem(20px) 0;
-  align-items: center;
   gap: toRem(12px);
+  @extend %center;
 
   &__option {
     display: flex;
@@ -27,6 +26,7 @@
     display: grid;
     grid-template-columns: toRem(160px) toRem(321px) 1fr toRem(62px);
     gap: toRem(40px);
+    font-size: 0.5rem;
     font-size: toRem(16px);
     align-items: center;
 
