--- a/practice-two/src/styles/layouts/brand.scss
+++ b/practice-two/src/styles/layouts/brand.scss
@@ -4,9 +4,8 @@
   min-width: toRem(390px);
 
   &__item, &__item-desktop {
-    display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    @extend %space ;
   }
 
   &__img {
@@ -15,7 +14,7 @@
 
   &--center {
     width: 100%;
-    display: flex;
+    @extend %center;
     justify-content: center;
     gap: math.div(37, 358) * 100%;
     padding-top: toRem(20px);
