--- a/practice-two/src/styles/utils/placeholder.scss
+++ b/practice-two/src/styles/utils/placeholder.scss
@@ -1,9 +1,9 @@
-%space {
+%flexbox-items-space-between {
   display: flex;
   justify-content: space-between;
 }
 
-%center {
+%flexbox-items-centered {
   display: flex;
   align-items: center;
 }
