--- a/practice-two/src/styles/layouts/product.scss
+++ b/practice-two/src/styles/layouts/product.scss
@@ -7,7 +7,7 @@
   &__item {
     margin-top: toRem(32px);
     margin-bottom: toRem(24px);
-    @extend %center;
+    @extend %flexbox-items-centered;
     gap: toRem(16px);
     overflow: auto;
 
@@ -33,7 +33,7 @@
   }
 
   &__evaluate {
-    @extend %center;
+    @extend %flexbox-items-centered;
     gap: toRem(4.44px);
     padding: toRem(4px) 0;
 
@@ -51,7 +51,7 @@
   }
 
   &__price {
-    @extend %center;
+    @extend %flexbox-items-centered;
     font-size: 1rem;
     font-weight: 700;
     gap: toRem(5px);
