--- a/practice-two/src/styles/layouts/brand.scss
+++ b/practice-two/src/styles/layouts/brand.scss
@@ -4,6 +4,7 @@
   min-width: toRem(390px);
 
   &__item, &__item-desktop {
+    @extend .container;
     flex-wrap: wrap;
     @extend %flexbox-items-space-between ;
   }
