--- a/practice-two/src/styles/modules/index.scss
+++ b/practice-two/src/styles/modules/index.scss
@@ -3,3 +3,8 @@
 @import 'btn.scss';
 @import 'title.scss';
 @import 'link.scss';
+@import 'info.scss';
+@import 'desc.scss';
+@import 'card.scss';
+@import 'evaluate.scss';
+@import 'price.scss';
