--- a/practice-two/src/styles/layouts/product.scss
+++ b/practice-two/src/styles/layouts/product.scss
@@ -4,7 +4,7 @@
   font-family: Satoshi;
   padding-bottom: 15px;
 
-  &__item {
+  &__box {
     margin-top: toRem(32px);
     margin-bottom: toRem(24px);
     @extend %flexbox-items-centered;
@@ -16,109 +16,25 @@
     }
   }
 
-  &__card {
-    text-align: left;
-
-    &-img {
-      margin-bottom: toRem(10px);
-      width: toRem(198px);
-      max-height: toRem(200px);
-      border-radius: toRem(12.42px);
-    }
-  }
-
-  &__name {
-    font-size: toRem(16px);
-    font-weight: 700;
-  }
-
-  &__evaluate {
-    @extend %flexbox-items-centered;
-    gap: toRem(4.44px);
-    padding: toRem(4px) 0;
-
-    &-img {
-      @include img-size(toRem(15.47px));
-    }
-
-    &-num {
-      font-size: 0.6rem;
-    }
-
-    &-desc {
-      color: $primary-color;
-    }
-  }
-
-  &__price {
-    @extend %flexbox-items-centered;
-    font-size: 1rem;
-    font-weight: 700;
-    gap: toRem(5px);
-
-    &-sell {
-      color: $decs-color;
-      text-decoration: line-through;
-    }
-
-    &-precent {
-      background-color: $bg-product;
-      font-size: 0.5rem;
-      border-radius: toRem(62px);
-      color: $product-color;
-      font-weight: 500;
-      padding: toRem(6px) toRem(14px);
-    }
-  }
-
-  &--bottom {
+  &--center {
     padding-bottom: toRem(40px);
     border-bottom: 1px solid $line-color;
   }
 }
 
+@media (min-width: 1440px) {
+  .product {
+    margin: toRem(62px) auto 0;
 
-  @media (min-width: 1440px) {
-    .product {
-      margin: toRem(62px) auto 0;
-      &__item {
-        margin-top: toRem(55px);
-        margin-bottom: toRem(36px);
-        justify-content: space-between;
-        overflow: none;
-      }
+    &__box {
+      margin-top: toRem(55px);
+      margin-bottom: toRem(36px);
+      justify-content: space-between;
+      overflow: none;
+    }
 
-      &__card {
-        &-img {
-          width: toRem(295px);
-          max-height: toRem(298px);
-          border-radius: toRem(20px);
-        }
-      }
-
-      &__name {
-        font-size: toRem(20px);
-      }
-
-      &__evaluate {
-        gap: toRem(5.31px);
-        padding: toRem(8px) 0;
-
-        &-img {
-          @include img-size(toRem(18.49px));
-        }
-
-        &-num {
-          font-size: toRem(14px);
-        }
-      }
-
-      &__price {
-        font-size: toRem(24px);
-      }
-
-      &--bottom {
-        padding-bottom: toRem(64px);
-      }
+    &--center {
+      padding-bottom: toRem(64px);
     }
   }
+}
