--- a/practice-two/src/styles/utils/index.scss
+++ b/practice-two/src/styles/utils/index.scss
@@ -1,3 +1,3 @@
-@import 'unit.scss';
-@import 'placeholder.scss';
-@import 'mixin.scss'
+@import 'functions.scss';
+@import 'placeholders.scss';
+@import 'mixins.scss'
