--- a/practice-two/src/styles/layouts/comment.scss
+++ b/practice-two/src/styles/layouts/comment.scss
@@ -3,7 +3,7 @@
   font-family: Satoshi;
   overflow: hidden;
 
-  &__card {
+  &__box {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: toRem(20px);
@@ -17,60 +17,10 @@
   &__action {
     display: flex;
   }
-
-  &__item {
-    margin-top: toRem(24px);
-    padding: toRem(24px);
-    min-width: toRem(358px);
-    border: 1px solid $line-color;
-    border-radius: toRem(20px);
-  }
-
-  &__evaluate {
-    min-width: toRem(118px);
-
-    &-img {
-      @include img-size(toRem(19.19px));
-    }
-  }
-
-  &__name {
-    @extend %flexbox-items-centered;
-    font-weight: 700;
-    font-size: toRem(16px);
-    padding: toRem(12px) 0 toRem(11.5px) 0;
-
-    &-img {
-      @include img-size(toRem(15.44px));
-    }
-  }
 }
 
 @media (min-width: 1440px) {
   .comment {
     margin: toRem(10px) 0 toRem(80px) 0;
-
-    &__item {
-      margin-top: toRem(40px);
-      padding: toRem(28px) toRem(32px);
-      min-height: toRem(240px);
-    }
-
-    &__evaluate {
-      max-width: toRem(138.84px);
-
-      &-img {
-        @include img-size(toRem(22.58px));
-      }
-    }
-
-    &__name {
-      font-size: toRem(20px);
-      padding: toRem(15px) 0 toRem(12px) 0;
-
-      &-img {
-        @include img-size(toRem(24px));
-      }
-    }
   }
 }
