--- a/practice-two/src/styles/modules/card.scss
+++ b/practice-two/src/styles/modules/card.scss
@@ -1,29 +1,65 @@
 .card {
   text-align: left;
+  display: flex;
+  flex-wrap: wrap;
+  gap: toRem(4.44px);
 
+  &__name {
+    font-weight: 700;
+    font-size: toRem(16px);
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+}
+
+.card-primary {
   &__img {
     margin-bottom: toRem(10px);
     width: toRem(198px);
     max-height: toRem(200px);
     border-radius: toRem(12.42px);
   }
+}
 
-  &__name {
-    font-size: toRem(16px);
-    font-weight: 700;
+.card-secondary {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: toRem(24px);
+  padding: toRem(24px);
+  min-width: toRem(358px);
+  border: 1px solid $line-color;
+  border-radius: toRem(20px);
+
+  &__img {
+    @include img-size(toRem(15.44px));
   }
 }
 
+
 @media (min-width: 1440px) {
   .card {
-    &__img {
-      width: toRem(295px);
-      max-height: toRem(298px);
-      border-radius: toRem(20px);
-    }
+    gap: toRem(8px);
 
     &__name {
       font-size: toRem(20px);
+    }
+  }
+
+  .card-primary {
+
+    &__img {
+      border-radius: toRem(20px);
+      @include min-size(toRem(295px), toRem(298px))
+    }
+  }
+
+  .card-secondary {
+    min-height: toRem(240px);
+
+    &__img {
+      @include img-size(toRem(24px));
     }
   }
 }
