--- a/practice-two/src/styles/modules/info.scss
+++ b/practice-two/src/styles/modules/info.scss
@@ -4,8 +4,10 @@
   max-width: toRem(278px);
   padding: toRem(20px) 0;
   margin: 0 toRem(40px);
+  margin: 0 auto;
 
   &__head {
+    flex-basis: auto;
     font-size: 1.2rem;
     font-weight: 700;
     padding: toRem(6px) 0;
@@ -14,10 +16,10 @@
       border-left: 1px solid $line-color;
       padding-left: toRem(27.5px);
     }
-  }
 
-  &--center {
-    margin: 0 auto;
+    &--center {
+      justify-content: center;
+    }
   }
 }
 
@@ -37,7 +39,7 @@
     }
 
     &__head--special {
-      padding-right: toRem(37.5px);
+      padding: 0 toRem(32px);
       border-right: 1px solid $line-color;
     }
   }
