--- a/practice-two/src/styles/modules/evaluate.scss
+++ b/practice-two/src/styles/modules/evaluate.scss
@@ -5,7 +5,6 @@
 .evaluate-primary {
   width: 100%;
   gap: toRem(4.44px);
-  // padding: toRem(4px) 0;
 
   &__img {
     @include img-size(toRem(15.47px));
@@ -21,7 +20,7 @@
 }
 
 .evaluate-secondary {
-  min-width: toRem(118px);
+  width: toRem(118px);
   justify-content: space-between;
 
   &__img {
@@ -32,7 +31,6 @@
 @media (min-width: 1440px) {
   .evaluate-primary {
     gap: toRem(5.31px);
-    padding: toRem(8px) 0;
 
     &__img {
       @include img-size(toRem(18.49px));
@@ -44,7 +42,9 @@
   }
 
   .evaluate-secondary {
-    min-width: toRem(138.84px);
+    width: toRem(118px);
+    width: toRem(138.84px);
+    height: 22.58px;
 
     &__img {
       @include img-size(toRem(22.58px));
