rename class __item to wrapper

--- a/practice-two/src/styles/layouts/brand.scss
+++ b/practice-two/src/styles/layouts/brand.scss
@@ -3,7 +3,7 @@
   padding: toRem(39px) 0;
   min-width: toRem(390px);
 
-  &__box {
+  &__wrapper {
     flex-wrap: wrap;
     @extend %flexbox-items-space-between;
   }
